--- a/Session-2/basics-05-using-the-native-event-object/index.html
+++ b/Session-2/basics-05-using-the-native-event-object/index.html
@@ -16,13 +16,18 @@
     <header>
       <h1>Vue Events</h1>
     </header>
+    <!--  'v-on:' = @ (replacement option)
+          'v-bind:value' = :value  (both are same) -->
     <section id="events">
       <h2>Events in Action</h2>
-      <button v-on:click="add(10)">Add 10</button>
-      <button v-on:click="reduce(5)">Subtract 5</button>
+      <button @click="add(10)">Add 10</button>
+      <button @click="reduce(5)">Subtract 5</button>
       <p>Result: {{ counter }}</p>
-      <input type="text" v-on:input="setName($event, 'Schwarzmüller')">
-      <p>Your Name: {{ name }}</p>
+      <!-- v-model=name =>(in place of) v-bind:value="name" v-on:input="setname('$event','goldiger')"  -->
+      <input type="text" v-model="name" />
+      <input type="text" v-model="lastname" />
+      <button @click="resetInput">Reset Button</button>
+      <p>Your Name: {{ fullname }}</p>
     </section>
   </body>
 </html>
