--- a/Session-2/basics-assignment-3-problem/index.html
+++ b/Session-2/basics-assignment-3-problem/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue Basics Assignment-3</title>
+    <title>Vue Basics Assignment - 3</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap"
       rel="stylesheet"
@@ -19,7 +19,7 @@
     <section id="assignment">
       <button @click="add(5)">Add 5</button>
       <button @click="add(1)">Add 1</button>
-      <!-- 1) Connect the buttons and calculate a value (a number) -->
+      <!-- 1) Connect the buttons and calculate a value (a number)  -> done -->
       <!-- Show "Not there yet" until you reach a result of exactly 37 -->
       <!-- Show "Too much!" if the result is greater than 37 -->
       <p>Result: {{ RESULT }}</p>
