--- a/Session-3/lists-cond-01-starting-setup/index.html
+++ b/Session-3/lists-cond-01-starting-setup/index.html
@@ -18,11 +18,29 @@
     </header>
     <section id="user-goals">
       <h2>My course goals</h2>
-      <input type="text" />
-      <button>Add Goal</button>
-      <p>No goals have been added yet - please start adding some!</p>
+      <input type="text" v-model="entergoal" />
+      <button @click="addGoal">Add Goal</button>
+      <!-- v-if="" next attribute as v-else either no in the answer.
+      v-show is alternative for v-if.-->
+      <p v-if="goals.length === 0">
+        No goals have been added yet - please start adding some!
+      </p>
+      <ul v-else>
+        <li
+          v-for="(goal, index) in goals"
+          :key="goal"
+          @click="removegoal(index)"
+        >
+          <p>{{ goal }}- {{ index }}</p>
+          <input type="text" @click.stop />
+        </li>
+      </ul>
+      <!-- v-for="goal in goals"-->
       <ul>
-        <li>Goal</li>
+        <!--<li v-for="num in 10">{{ num }}</li>
+        <li v-for="(value,key) in {name : 'Mohit', age : 21}">
+          {{ key }} : {{ value }}
+        </li>-->
       </ul>
     </section>
   </body>
