--- a/Session-6/cmp-intro-01-starting-setup/index.html
+++ b/Session-6/cmp-intro-01-starting-setup/index.html
@@ -20,7 +20,7 @@
     <section id="app">
       <ul>
         <friend-contact></friend-contact>
-        <friend-contact></friend-contact>
+        <user-contact></user-contact>
       </ul>
     </section>
   </body>
