Assignment of Daily Log

--- a/daily-log-assignment/index.html
+++ b/daily-log-assignment/index.html
@@ -43,10 +43,10 @@
             <td>{{log.sections}}</td>
             <td><a :href="log.repo">Git repo </a></td>
             <td>
-              <div class="bprogress">
-                <div class="bprogresstext">{{log.progress}}</div>
+              <div class="progressReport">
+                <div class="progresstext">{{log.progress}}</div>
                 <div
-                  class="bprogressvalue"
+                  class="progressvalue"
                   :style=" {width: log.progress}"
                 ></div>
               </div>
